--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Create tier three infrastructure
 
 on:
   push:
-    branches: [main]
+    branches: 
+      - main
     paths:
       - terraform/**
 permissions:
