--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,18 +21,18 @@ jobs:
           aws-access-key-id: $ {{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: $ {{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
-      - name : set up terraform
-        uses : hashicorp/setup-terraform@v3
-        with :
-          terraform_version: latest
-          terraform_wrapper: false
-      - name: run terraform init & plan
-        run: terraform init & terraform plan
-      - name: run terraform validate
-        run: terraform validate
-      - name: run terraform apply
-        run: terraform apply
-        
+      # - name : set up terraform
+      #   uses : hashicorp/setup-terraform@v3
+      #   with :
+      #     terraform_version: latest
+      #     terraform_wrapper: false
+      # - name: run terraform init & plan
+      #   run: terraform init & terraform plan
+      # - name: run terraform validate
+      #   run: terraform validate
+      # - name: run terraform apply
+      #   run: terraform apply
+      
 
 
 
