--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v3
-      - name : set up aws credentials
-        uses : aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: $ {{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: $ {{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
+      # - name : set up aws credentials
+      #   uses : aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: $ {{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: $ {{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: eu-central-1
       # - name : set up terraform
       #   uses : hashicorp/setup-terraform@v3
       #   with :
