--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
   create-vpc:
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v3
+      - name : set up github
+        uses: actions/checkout@v3
       # - name : set up aws credentials
       #   uses : aws-actions/configure-aws-credentials@v1
       #   with:
