--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Create tier three infrastructure
 on:
   push:
     branches: 
-      - main
+      - 'main'
     paths:
       - terraform/**
 permissions:
