--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - 'main'
     paths:
-      - terraform/**
+      - 'terraform/**'
 permissions:
   pull-requests: write
   contents: read
