--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     paths:
-      - 'vpc-terraform/**'
+      - vpc-terraform/**
 permissions:
   pull-requests: write
   contents: read
