--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [main]
     paths:
-      - vpc-terraform/**
+      - 'terraform/**'
+      - '.github/**'
 permissions:
   pull-requests: write
   contents: read
