--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,10 @@ jobs:
           terraform_version: latest
           terraform_wrapper: false
       - name: run terraform init & plan
-        run: cd terraform & terraform init & terraform plan
+        run: |
+          cd terraform 
+          terraform init 
+          terraform plan
       - name: run terraform validate
         run: terraform validate
       - name: run terraform apply
