--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
       - name: run terraform validate
         run: terraform validate
       - name: run terraform apply
-        run: terraform apply
+        run: terraform apply -auto-approve
