--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,14 @@ jobs:
         run: |
           ls -l 
           cd terraform 
+          pwd
+          ls -l
           terraform init 
           terraform plan 
           
       - name: run terraform validate
         run: |
           terraform validate
-          cd terraform
           ls -l
       - name: run terraform apply
         run: terraform apply -auto-approve
