--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
           cd terraform 
           pwd
           ls -l
+          cat main.tf
           terraform init 
           terraform plan 
           
