--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,6 @@ jobs:
         run: |
           pwd
           ls
+          cd terraform
+          terraform init
           terraform apply -auto-approve
