--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,36 +4,87 @@ on:
   push:
     branches: [main]
     paths:
-      - "**"
+      - "terraform/**"
+  pull_request: 
+    branches:
+      - 'main'
+    paths:
+      - 'terraform/**'
 
 permissions:
   pull-requests: write
   contents: read
 
+env:
+  TF_LOG: INFO
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
+
 jobs:
   create-vpc-with-tf:
     runs-on: ubuntu-latest
+    defaults: 
+      run: 
+        shell:  bash
+        working-directory: ./terraform
     steps:
       - name: set up github
         uses: actions/checkout@v3
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
       - name: set up terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: latest
           terraform_wrapper: false
-      - name: navigate in the 'terraform' folder
-        run: |
-          cd terraform
-      - name: run terraform apply
-        run: |
-          cd terraform
-          terraform init
-          terraform plan 
-          terraform validate
-          terraform apply -auto-approve
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: eu-central-1
+      
+      - name: terraform init
+        id: init
+        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+      - name: terraform format
+        id: fmt
+        run: terraform fmt -check
+      - name: terraform validate
+        id:  validate
+        run: terraform validate
+      - name: terraform plan
+        id: plan
+        if: github.event_name== 'pull_request'
+        run: terraform plan -no-color -input=false
+        continue-on-error: true
+      - uses : actions/github-script@v6
+        if: github.event_name == 'pull_request'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        with:
+          script: |
+            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+            <details><summary>Show Plan</summary>
+            \`\`\`\n
+            ${process.env.PLAN}
+            \`\`\`
+            </details>
+            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+      - name: terraform plan status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
+      - name: terraform apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false
+  
+ 
+      
