--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,9 @@ jobs:
       
       - name: terraform init
         id: init
-        run: terraform init -backend-config="bucket=${{ secrets.BUCKET_TF_STATE}}"
+        run: |
+          aws s3 ls
+          terraform init -backend-config="bucket=${{ secrets.BUCKET_TF_STATE}}"
       - name: terraform format
         id: fmt
         run: terraform fmt -check
