--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       run: 
         shell:  bash
         working-directory: ./terraform
-        
+
     steps:
       - name: set up github
         uses: actions/checkout@v3
@@ -45,10 +45,13 @@ jobs:
       - name: Handle VPC existence
         run: |
           echo "check if vpc already exist"
-          aws ec2 describe-vpcs --filter Name=tag:Name,Values=my-vpc > vpc_response.txt
-          grep -i "available" vpc_response.txt 
-          echo "vpc already exist, stop the vpc creation"
-          exit 1
+          aws ec2 describe-vpcs --filter Name=tag:Name,Values=${{env.VPC_NAME}} > vpc_response.txt
+           
+          available = grep -c "available" vpc_response.txt
+          if [ $available > 0 ]; then
+            echo "vpc already exist, stop the vpc creation"
+            exit 1
+          fi
       - name: terraform init
         id: init
         run: |
