--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,12 +45,13 @@ jobs:
       - name: Handle VPC existence
         run: |
           echo "check if vpc already exist"
-          aws ec2 describe-vpcs --filter Name=tag:Name,Values=${{env.VPC_NAME}} > vpc_response.txt
-           
-          available = grep -c "available" vpc_response.txt
-          if [ $available > 0 ]; then
+          aws ec2 describe-vpcs --filter Name=tag:Name,Values=qaqsq > vpc_response.txt
+          available=$(grep -c "available" vpc_response.txt)
+          if [ $available -gt 0 ]; then
             echo "vpc already exist, stop the vpc creation"
             exit 1
+          else
+            echo "the vpc doesn't exist, continue with the vpc creation action"
           fi
       - name: terraform init
         id: init
