created the first logic for the creation of the subnet

--- a/.github/workflows/subnet.yml
+++ b/.github/workflows/subnet.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches: [main]
         paths:
-            - "./terraform/modules/subnet/**"
+            - "terraform/modules/subnet/**"
 
 permissions:
     pull-requests: write
