--- a/.github/workflows/subnet.yml
+++ b/.github/workflows/subnet.yml
@@ -39,4 +39,4 @@ jobs:
             - name: terraform plan
               run: terraform plan -input=false
             - name: terraform apply
-              run: terraform apply
+              run: terraform apply -auto-approve -input=false
