--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -5,6 +5,7 @@ on:
         branches: [main]
         paths: 
             - "terraform/modules/ec2/**"
+            - ".github/workflows/ec2.yml"
 permissions:
     pull-requests: write
     contents: read
@@ -16,6 +17,8 @@ jobs:
                 shell: bash
                 working-directory: ./terraform
         steps:
+            - name: test
+              run: echo >> 'Helloo worflow'
             - name: setup github
               uses: actions/checkout@v3
             - name: setup terraform
