--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -1,41 +1,41 @@
 name: create the ec2 instances
 
 on:
-    push:
-        branches: [main]
-        paths: 
-            - "terraform/modules/ec2/**"
+  push:
+    branches: [main]
+    paths:
+      - "terraform/modules/ec2/**"
 permissions:
-    pull-requests: write
-    contents: read
+  pull-requests: write
+  contents: read
 jobs:
-    create-ec2:
-        runs-on: ubuntu-latest
-        defaults:
-            run:
-                shell: bash
-                working-directory: ./terraform
-        steps:
-            - name: test
-              run: echo 'Helloo worflow'
-            - name: setup github
-              uses: actions/checkout@v3
-            - name: setup terraform
-              uses: hashicorp/setup-terraform@v3
-              with:
-                terraform_version: latest
-                terraform_wrapper: false
-            - name: setup aws credentials
-              uses: aws-actions/configure-aws-credentials@v1
-              with:
-                aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-                aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-                aws-region: 'eu-central-1'
-            - name: run init
-              run: terraform init
-            - name: run validate
-              run: terraform validate
-            - name: run plan
-              run: terraform plan
-            - name: run apply
-              run: terraform apply auto-approve
+  create-ec2:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform
+    steps:
+      - name: test
+        run: echo 'Helloo worflow'
+      - name: setup github
+        uses: actions/checkout@v3
+      - name: setup terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: latest
+          terraform_wrapper: false
+      - name: setup aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: "eu-central-1"
+      - name: run init
+        run: terraform init
+      - name: run validate
+        run: terraform validate
+      - name: run plan
+        run: terraform plan
+      - name: run apply
+        run: terraform apply auto-approve
