--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -14,7 +14,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./terraform
+        working-directory: terraform
     steps:
       - name: test
         run: echo 'Helloo worflow'
@@ -30,7 +30,7 @@ jobs:
         with:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: "eu-central-1"
+          aws-region: 'eu-central-1'
       - name: run init
         run: terraform init
       - name: run validate
