--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -44,4 +44,4 @@ jobs:
       - name: run plan
         run: terraform plan
       - name: run apply
-        run: terraform apply auto-approve
+        run: terraform apply -auto-approve
